Survey: Add utf-8 meta tag

--- a/external/survey-2018/index.html
+++ b/external/survey-2018/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Web Survey Report 2018 | Node.js</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="bootstrap.min.css">
