Survey: Add download links

--- a/external/survey-2018/index.html
+++ b/external/survey-2018/index.html
@@ -152,6 +152,10 @@
               <a href="#methodology">Methodology</a>
             </li>
           </ul>
+          <ul class="nav main-nav">
+              <li><a href="2018-nodejs-user-survey-report.pdf">Download as PDF</a></li>
+              <li><a href="2018-nodejs-user-survey-raw-data.xslx">Get the raw data (Excel)</a></li>
+          </ul>
           <ul class="back-to-top _muted">
               <li>
                   <a href="#top">Back to top &thinsp; <img src="images/picture2.png"></a>
