Survey: Fix file extension

--- a/external/survey-2018/index.html
+++ b/external/survey-2018/index.html
@@ -154,7 +154,7 @@
           </ul>
           <ul class="nav main-nav">
               <li><a href="2018-nodejs-user-survey-report.pdf">Download as PDF</a></li>
-              <li><a href="2018-nodejs-user-survey-raw-data.xslx">Get the raw data (Excel)</a></li>
+              <li><a href="2018-nodejs-user-survey-raw-data.xlsx">Get the raw data (Excel)</a></li>
           </ul>
           <ul class="back-to-top _muted">
               <li>
