--- a/external/survey-2018/graph.html
+++ b/external/survey-2018/graph.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Web Survey Report 2018: Technologies | Node.js</title>
