auto detect ltr and rtl text

--- a/external/survey-2018/index.html
+++ b/external/survey-2018/index.html
@@ -307,7 +307,7 @@
           <div class="section-content">
             <ul>
               <li>
-                The typical respondent is a developer in a small (<100 employees) firm, with 5 years professional experience,
+                The typical respondent is a developer in a small (&lt;100 employees) firm, with 5 years professional experience,
               </li>
               <li>
                 Although many have 10+ years total development experience, respondents are somewhat less experienced overall in this wave.
@@ -1631,6 +1631,7 @@ https://twitter.com/intent/tweet?text=Check%20out%20Availability%20of%20Multiple
             <ul>
               <li>
                 Perceptions of availability of resources vary considerably by region – with those in Latin America generally more upbeat, but those in APAC and EMEA having concerns in some specific topic areas.
+              </li>
             </ul>
             <div class="imagesection">
               <img src="images/charts/capture31.png" data-capture="31">
@@ -1929,6 +1930,7 @@ https://twitter.com/intent/tweet?text=Check%20out%20Availability%20of%20Multiple
             <ul>
               <li>
                 More than half of users rely on LTS release line – but that number is slipping.
+              </li>
               <li>
                 Current is particularly popular among small companies, and newer Node users.
               </li>
@@ -1954,6 +1956,7 @@ https://twitter.com/intent/tweet?text=Check%20out%20Availability%20of%20Multiple
             <ul>
               <li>
                 is important to most users to have LTS for Node.js.
+              </li>
               <li>
                 Users in EMEA and smaller companies are less likely to see it as a priority, but even here, more than half say it is important.
               </li>
@@ -1978,6 +1981,7 @@ https://twitter.com/intent/tweet?text=Check%20out%20Availability%20of%20Multiple
             <ul>
               <li>
                 While many say the LTS Schedule/Support timeframe is clear, that number has dropped significantly since last year – overall and across multiple segments.
+              </li>
               <li>
                 APAC users, front-end developers and those in small companies are least likely to see LTS schedule/support timeframe as clear.
               </li>
@@ -2002,6 +2006,7 @@ https://twitter.com/intent/tweet?text=Check%20out%20Availability%20of%20Multiple
             <ul>
               <li>
                 Newer Node users are less likely than their more seasoned peers in their use of version manager, and are more likely to use Apt-Get.
+              </li>
               <li>
                 While it is not as important to them to have LTS support, most novice users still do want it, and their understanding of the schedule/support timeframe is weak.
               </li>
